1.34 fix height on small pages (missing from removing AdminLTE)

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -43,8 +43,10 @@
 }
 // for the content panel
 .content-wrapper {
-  margin-right: auto;
-  margin-left: auto;
+    margin-right: auto;
+    margin-left: auto;
+    height: auto;
+    min-height: 100%
 }
 .content {
   min-height: 250px;
